# tally

./: .gitignore  ADDING_MODELS_GUIDE.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROVIDERS_PLAN.md  README.md  install.ps1  install.sh
.github/workflows/: README.md  SETUP.md  ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/analyzers/: duplicates.rs  mod.rs  scanner.rs  types.rs
src/http/: client.rs  mod.rs
src/http/providers/: anthropic.rs  generic.rs  mod.rs  openai.rs  openrouter.rs
src/models/: mod.rs  pricing.rs  registry.rs
src/output/: insights.rs  json.rs  markdown.rs  mod.rs  text.rs
src/parsers/: json.rs  mod.rs  text.rs
src/simulator/: config.rs  mod.rs  simulator.rs
src/tokenizers/: gemini.rs  mod.rs  openai.rs  trait_impl.rs
src/utils/: markdown.rs  mod.rs
tests/: integration_analyze.rs  unit_analyzers.rs
